// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP ukrainian/ukraine_in_russian IDX page A11y I can see the skip to content link 1`] = `"Перейти к содержанию"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=94&p=ukrainian.ukraine_in_russian.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Acps%3A40c7c53a-ba2e-8679-e050-380a4e807947]&x2=[amp]&x3=[news-ukrainian]&x4=[ru]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[index-section]&x8=[simorgh]&x9=[%D0%A0%D0%A3%D0%A1%2520-%2520BBC%2520News%2520%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0]&x11=[2016-11-22T07%3A16%3A56.000Z]&x12=[2022-02-24T13%3A24%3A42.000Z]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "Index",
    "domain": "test.bbc.co.uk",
    "sections": "Ukrainian, Ukrainian - IDX",
    "title": "РУС - BBC News Україна",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Україна",
  "url": "/ukrainian",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 2`] = `
{
  "text": "Чому BBC заслуговує на довіру",
  "url": "https://www.bbc.com/ukrainian/institutional-50170368",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 3`] = `
{
  "text": "Правила користування",
  "url": "https://www.bbc.com/ukrainian/institutional-38144387",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 4`] = `
{
  "text": "Особисті дані",
  "url": "https://www.bbc.com/ukrainian/institutional-38144827",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 5`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 6`] = `
{
  "text": "Напишіть на ВВС",
  "url": "https://www.bbc.co.uk/ukrainian/send/u50853885",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 7`] = `
{
  "text": "Ознайомтеся з нашими правилами зовнішніх посилань.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/ukrainian"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Paragraphs should match text 1`] = `"© 2024 BBC. BBC не несе відповідальності за контент інших сайтів. Ознайомтеся з нашими правилами зовнішніх посилань."`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header I can see the branding 1`] = `"BBC News, Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 1`] = `
{
  "text": "Головна",
  "url": "/ukrainian",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 2`] = `
{
  "text": "Війна з Росією",
  "url": "/ukrainian/topics/czp6w66edqpt",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 3`] = `
{
  "text": "Історії",
  "url": "/ukrainian/53725237",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 4`] = `
{
  "text": "Відео",
  "url": "/ukrainian/55425840",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 5`] = `
{
  "text": "Книга року BBC",
  "url": "/ukrainian/features-50320117",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 6`] = `
{
  "text": "Подкасти",
  "url": "/ukrainian/podcasts/p09jsy3h",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Index Alsos should match visually hidden text 1`] = `"Читайте также"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Main heading should match text 1`] = `"РУС"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/ukrainian/images/icons/icon-192x192.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-72x72.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-96x96.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-128x128.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-144x144.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-152x152.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-180x180.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-192x192.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-384x384.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/ukrainian/images/icons/icon-512x512.png",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Canonical link 1`] = `"http://localhost:7080/ukrainian/ukraine_in_russian"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Heading level 1 1`] = `"РУС"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Lang attribute 1`] = `"ru-UA"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ru-UA",
        "name": "Russian",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/ukrainian/ukraine_in_russian",
        "@type": "WebPage",
        "name": "РУС",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
          "width": 1024,
        },
        "name": "BBC News Україна",
        "publishingPrinciples": "https://www.bbc.com/ukrainian/institutional-50170368",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png",
      "url": "http://localhost:7080/ukrainian/ukraine_in_russian",
    },
  ],
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG description 1`] = `"Новости BBC News Україна на русском"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG image alt 1`] = `"BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG locale 1`] = `"ru_UA"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG site name 1`] = `"BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG title 1`] = `"РУС - BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG type 1`] = `"website"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG url 1`] = `"http://localhost:7080/ukrainian/ukraine_in_russian"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Page title 1`] = `"РУС - BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter creator 1`] = `"@BBC_ua"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter description 1`] = `"Новости BBC News Україна на русском"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter image alt 1`] = `"BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter site 1`] = `"@BBC_ua"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter title 1`] = `"РУС - BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Sections should match headline text 1`] = `"Главное"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Sections should match headline text 2`] = `"Спецпроект"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Sections should match headline text 3`] = `"BBC ЖурналПосмотреть все"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Sections should match headline text 4`] = `"Статьи"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Sections should match headline text 5`] = `"Подробно"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Story Promo Headline should match text 1`] = `"Россия напала на Украину. Москва наносит удары по целям в Киеве, Харькове и других городах"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Story Promo Image should match image 1`] = `
<amp-img
  alt="Чугуїв"
  attribution="Getty Images"
  class="bbc-image"
  fallback=""
  height="576"
  layout="responsive"
  sizes="(min-width: 1100px) 496px, (min-width: 600px) 45.83vw, 94.29vw"
  src="https://ichef.bbci.co.uk/ace/ws/660/cpsprodpb/38A3/production/_123399441_gettyimages-1238719408.jpg"
  srcset="https://ichef.bbci.co.uk/ace/ws/70/cpsprodpb/38A3/production/_123399441_gettyimages-1238719408.jpg 70w, https://ichef.bbci.co.uk/ace/ws/95/cpsprodpb/38A3/production/_123399441_gettyimages-1238719408.jpg 95w, https://ichef.bbci.co.uk/ace/ws/144/cpsprodpb/38A3/production/_123399441_gettyimages-1238719408.jpg 144w, https://ichef.bbci.co.uk/ace/ws/183/cpsprodpb/38A3/production/_123399441_gettyimages-1238719408.jpg 183w, https://ichef.bbci.co.uk/ace/ws/240/cpsprodpb/38A3/production/_123399441_gettyimages-1238719408.jpg 240w, https://ichef.bbci.co.uk/ace/ws/320/cpsprodpb/38A3/production/_123399441_gettyimages-1238719408.jpg 320w, https://ichef.bbci.co.uk/ace/ws/660/cpsprodpb/38A3/production/_123399441_gettyimages-1238719408.jpg 660w"
  width="1024"
/>
`;
